syntax = "proto3";

package mxq.echooy.rsocket.rpc;

import "google/protobuf/empty.proto";

option java_package = "mxq.echooy.rsocket.rpc.proto";
option java_outer_classname = "SimpleServiceProto";
option java_multiple_files = true;

service SimpleService {
    rpc RequestResponse (SimpleRequest) returns (SimpleResponse) {}

    rpc FireAndForget (SimpleRequest) returns (google.protobuf.Empty) {}

    rpc RequestStream (SimpleRequest) returns (stream SimpleResponse) {}

    rpc RequestChannel (stream SimpleRequest) returns (stream SimpleResponse) {}
}

message SimpleRequest {
    string requestMessage = 1;
}

message SimpleResponse {
    string responseMessage = 1;
}
